[package]
name = "katgpt-speculative"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Speculative decoding + DDTree substrate shared by katgpt-rs and riir-engine (Issue 013)"
repository = "https://github.com/katopz/katgpt-rs"
keywords = ["speculative", "decoding", "ddtree", "inference", "modelless"]
categories = ["algorithms", "science"]
publish = false  # only katgpt-core ships to crates.io

[dependencies]
# Types + traits + speculative type substrate (TreeNode, DraftResult, ConstraintPruner, etc.)
katgpt-core = { path = "../katgpt-core" }
# Config, Rng, InferenceResult, RetrievalHeadRole, RtTurboConfig
katgpt-types = { path = "../katgpt-types" }
# Parallel BFS expansion
rayon = "1.10"
# serde for rt_turbo calibration/projection serialization (Plan 126).
serde = { version = "1", features = ["derive"], optional = true }
# postcard for rt_turbo binary calibration roundtrip (Plan 126).
postcard = { version = "1", features = ["alloc"], optional = true }
# blake3 for spechop segment_match content-addressed segment hashing.
blake3 = { version = "1", optional = true }
# katgpt-kv for cache_prune (RollingHash, SummedAreaTable) consumed by spechop
# segment_match + rt_turbo sat_retrieval. Optional — only needed when those
# modules are enabled (Proposal 003 Phase 6).
katgpt-kv = { path = "../katgpt-kv", default-features = false, optional = true }
# f16 KV cache storage for chain_fold's chain_folder (Phase 12 T4.5 move).
half = { version = "2", optional = true }
# RNG for fold_bandit (Phase 12 T4.5 move) + belief_drafter/spec_generator
# (Plan 386 move from root).
fastrand = { version = "2", optional = true }
# Lock-free HashMap for belief_cache (Plan 386 move from root; belief_drafter feature).
papaya = { version = "0.2", optional = true }
# Zero-cast byte slices for belief_drafter save/load + selectivity_router
# snapshot serialization (Plan 386 move from root).
bytemuck = { version = "1", optional = true }
# Transformer substrate types — TransformerWeights (Plan 389, 2026-07-05).
# Mandatory because the hosted SpeculativeVerifier trait (verifier_trait.rs)
# references TransformerWeights in its signature, and root's verifier.rs (which
# is always compiled) implements the trait for SimulatedVerifier +
# LeviathanVerifier. The parallel_probe module is opt-in via the
# `parallel_probe` feature, but the trait itself is always-on.
katgpt-transformer = { path = "../katgpt-transformer" }

[features]
# Forward sr2am_configurator to katgpt-types so `build_inference_result` can
# populate InferenceResult.planning_decision / plan_horizon_used (Plan 112).
# Default-off mirrors katgpt-types / katgpt-core / katgpt-rs.
sr2am_configurator = ["katgpt-types/sr2am_configurator"]

# Lodestar completion-distance pruning (Plan 207). Gates
# `build_dd_tree_lodestar` + `LodestarConfig` in dd_tree.rs. The pruner
# (`LodestarPruner`) and automaton live in katgpt-pruners; the tree builder
# lives here because it composes `TreeBuilder` internals. katgpt-pruners
# forwards this feature so callers enabling `katgpt-pruners/lodestar` get
# both halves.
lodestar = []

# PPoT core primitives (types, knowledge, entropy, rank). The `resample`
# orchestrator stays in katgpt-rs root (12 root-only refs); this crate owns the
# four zero-root-coupling leaves (Issue 003). Forwarded from root `ppot`.
ppot = []

# ── Proposal 003 Phase 6 absorptions (2026-07-04) ──────────────────────────
# Each feature gates one module moved from katgpt-rs/src/. Root forwards these
# so historical `katgpt_rs::<module>::*` paths keep resolving via re-export.

# ILC Iterative Latent Clustering — synonym-aware DDTree pruning (Research 136).
# Moved from src/distill/ilc.rs. No extra deps (uses crate-local dd_tree +
# re-exported ScreeningPruner/TreeNode + katgpt_types::Config).
ilc_distill = []

# SpecHop continuous multi-hop speculation pipeline (Plan 131, Research 091).
# Moved from src/spechop/. Pulls katgpt-kv (cache_prune::RollingHash for
# segment_match) and serde (IndexedSegment serialization).
spechop = ["dep:katgpt-kv", "cache_prune", "dep:serde", "dep:blake3", "bandit"]

# bandit alias — gates BanditSpeculator in spechop (originally gated by the
# root `bandit` feature which pulls katgpt-pruners/bandit). In katgpt-speculative
# BanditSpeculator is generic over ScreeningPruner (no katgpt-pruners dep), so
# this is a pure on/off switch. Always enabled by spechop.
bandit = []

# RecFM recursive cross-scale consistency — DDTree + LT2 + SpecHop (Plan 168,
# Research 150). Gates CrossHopConfig + observation_velocity in spechop/speculator.
# Mirrors the root `recfm = []` feature.
recfm = []

# Adaptive Causal Calibration (Proposal 004) — opt-in convenience wrapper around
# calibrate_from_adaptive_causal in rt_turbo/calibration. Forwards to
# katgpt-core/adaptive_causal_calibration which provides suspect_indices
# (chained: enables katgpt-core/causal_head_importance transitively).
adaptive_causal_calibration = ["katgpt-core/adaptive_causal_calibration"]

# cache_prune forward — gates segment_match (spechop) + sat_retrieval (rt_turbo).
# Forwards to katgpt-kv so `use katgpt_kv::cache_prune::*` resolves.
cache_prune = ["dep:katgpt-kv", "katgpt-kv/cache_prune"]

# RTPurbo retrieval-head sparse decode (Plan 126, Research 86). Moved from
# src/rt_turbo/. Pulls katgpt-kv (cache_prune::SummedAreaTable for
# sat_retrieval) + serde + postcard for calibration binary roundtrip.
rt_turbo = ["cache_prune", "dep:serde", "dep:postcard"]

# PASD boundary-aware draft scoring (Plan 227 Phase 4). Moved from
# src/precision_aware_draft.rs. Zero external deps.
precision_aware_draft = []

# Speculative Reconciliation Engine — verify offline trajectories against
# plausibility manifolds (Plan 177). Moved from src/spec_reconciliation/.
# No extra deps beyond katgpt-types/katgpt-core (already mandatory).
spec_reconciliation = []

thinking_prune = []  # Gates the `build_hop_dd_tree_with_schedule` path in spechop/hop_tree.rs
# (Plan 171 FrozenBaseGuard semantics). No deps — the schedule type is defined
# locally in katgpt-speculative to avoid a katgpt-pruners cycle (katgpt-pruners
# already depends on katgpt-speculative for sr2am_configurator forwarding).

# ── Phase 12 T4.5 (2026-07-04): modules moved from katgpt-rs/src/. ──
# Progressive MCGS — self-contained graph search (Plan 148). Zero non-std deps.
progressive_mcgs = []
# Chain Fold — step-boundary-aware context folding (Plan 195). Needs katgpt-kv
# for still_kv types (BetaBias, KVChunk, CompactionStrategy) used in chain_folder.
# Note: enables the implicit `fastrand` feature (not `dep:fastrand`) so that
# `#[cfg(feature = "fastrand")]` in scheduler.rs resolves cleanly without an
# `unexpected_cfgs` lint. Either form enables the dep; only the feature-name
# form also defines the cfg-checkable feature.
chain_fold = ["dep:katgpt-kv", "katgpt-kv/still_kv", "still_kv", "dep:half", "fastrand"]
# still_kv tracking flag — gates the chain_folder still_kv code path. Implied by chain_fold.
still_kv = []
# Bake precision sub-feature for fold's attention_importance path.
bake_precision = []

# ── Plan 384 (2026-07-05): module moved from katgpt-rs/src/. ──
# TRD = Trajectory-Refined Draft screening (Plan 249). Originally blocked in
# root by `crate::fold` dep; Phase 12 T4.5 moved `fold/` here, dissolving the
# cycle. The `prefold_prefix` path inside trd.rs is gated by `chain_fold`
# (already defined above) — no extra deps needed for this tracking flag.
trd_refined_draft = []
# Cross-crate feature references (Plan 384, 2026-07-05): the following
# features live in the main katgpt-rs crate but are referenced by
# `#[cfg(feature = "...")]` blocks in trd.rs (moved from root). They are NOT
# used here — the gated code is dead-code stubs that compile out — but we
# declare them as empty tracking flags so the `unexpected_cfgs` lint doesn't
# fire on the cfg attribute. The root crate re-implements the integration
# locally where needed.
plasma_path = []
gpu = []
# depth_invariance tracking flag — belief_drafter's `audit_depth_invariance` path
# (Plan 386 move from root). Empty tracking flag; the diagnostic primitive lives
# in katgpt-core/depth_invariance, this just gates the local audit method.
depth_invariance = []
# self_cond_draft tracking flag — belief_drafter's 2-pass self-conditioned path
# (Plan 386 move from root). Forwards to katgpt-core for the trait half.
self_cond_draft = ["katgpt-core/self_cond_draft"]

# ── Plan 386 (2026-07-05): speculative modules moved from katgpt-rs/src/speculative/. ──
# Each feature gates one module moved in Phase 1. Root forwards these so
# historical `katgpt_rs::speculative::<module>::*` paths resolve via re-export.

# AcceptanceForecast — entropy-bounded acceptance-rate forecast (ungated in
# root; Plan 023 GOAT candidate). Zero deps.
acceptance_forecast = []
# NextLat Belief-State Speculative Drafter (Plan 217). Forwards to katgpt-core
# so BeliefDrafterConfig/traits resolve + pulls papaya (belief_cache) + fastrand.
belief_drafter = ["katgpt-core/belief_drafter", "dep:papaya", "dep:blake3", "fastrand", "dep:bytemuck"]
# Best Buddies Drafting — mutual NN filter (Plan 199). Zero deps beyond katgpt-core traits.
best_buddies = []
# Domino Causal Correction — PrefixCorrectionTable + domino_score (Plan 197).
# Pulls blake3 for prefix hashing.
domino_correction = ["dep:blake3"]
# SpeculativeGenerator token-domain (Plan 193). Forwards to katgpt-core for the trait.
speculative_generator = ["katgpt-core/speculative_generator", "fastrand"]
# DendriticGate NMDA-inspired adaptive tree branching (Plan 260). Forwards to katgpt-core.
dendritic_gate = ["katgpt-core/dendritic_gate"]
# Kurtosis Gate — polarization-driven speculative decoding (Plan 203b). Forwards to katgpt-core.
kurtosis_gate = ["katgpt-core/kurtosis_gate"]
# Self-Learning Selectivity Router (Plan 204). Implies kurtosis_gate (moved dep).
selectivity_router = ["kurtosis_gate", "dep:bytemuck"]
# NFCoT FlowScore tracking flag (Plan 229). nf_flow.rs already in this crate;
# nf_flow_generator + nf_flow_qgf move in with it (Plan 386). The generator/qgf
# modules are gated `all(nf_flow_score, speculative_generator)` / `all(nf_flow_score,
# qgf_drafter)` matching root's gating — nf_flow_score itself stays empty.
nf_flow_score = []
# NFCoT × QGF Fusion (Plan 268 T6). Forwards to katgpt-core for QGuidedDrafter.
qgf_drafter = ["katgpt-core/qgf_drafter"]
# Parallel-Probe 2D controller (Plan 133, Research 094). Gates answer_extract
# (Phase 16) + parallel_probe module (Plan 389 Phase 4). The hosted
# SpeculativeVerifier trait (verifier_trait module) is always-on (not gated
# here) because root's verifier.rs always-compiles impls of the trait.
parallel_probe = []

# ── Plan 387 (2026-07-05): Phase 2 speculative cluster move. ──
# 10 modules moved from katgpt-rs/src/speculative/. Tracking flags + forwards.

# LDT α-operator conflict-clause pruning (Plan 088). Forwards to katgpt-core
# for the trait half; the α-operator module lives here.
lattice_deduction = ["katgpt-core/lattice_deduction"]

# Compression-adaptive decode budget (Plan 167). Zero deps beyond
# katgpt-core speculative types.
budget_adaptation = []

# CaDDTree cost-aware adaptive DDTree budget (Plan 219). Needs spec_cost_model
# (forwarded to katgpt-core) for the SpecCostSnapshot seed path.
caddtree_budget = ["katgpt-core/spec_cost_model"]
spec_cost_model = ["katgpt-core/spec_cost_model"]

# PEIRA distill ScreeningPruner (Plan 153). Tracking flag — the substrate
# (katgpt-spectral/peira_distill) is consumed via root re-export; this crate's
# peira_pruner module is the spec-decode-specific ScreeningPruner impl.
peira_distill = []

# Domino LoRA causal correction adapter (Plan 231). Zero extra deps.
domino_lora = []

# Tracking flags for caddtree_budget's mux_residual variant. The function
# `build_dd_tree_adaptive_mux_residual` is gated `all(mux_demux, rcd_residual)`.
# Forward to katgpt-core so the underlying `compute_mux_residual` compiles.
mux_demux = ["katgpt-core/mux_demux"]
rcd_residual = ["katgpt-core/rcd_residual"]

# Tracking flag for budget.rs's EchoConsistency variant (Plan 167). Also gates
# the echo_env module (Plan 388 Phase 3 move from root — cycle resolved via
# freeze/proof_cache/ThinkingMode extraction to katgpt-core). Forwards to
# katgpt-core so BudgetAdaptation::EchoConsistency variant compiles.
echo_env_predictor = ["katgpt-core/echo_env_predictor"]

# Adaptive CoT Thinking Controller (Plan 194, Plan 388 Phase 3 move from root).
# Gates the thinking_controller module. Root forwards via katgpt-speculative/thinking_cot.
thinking_cot = []

# RV-Gated Thinking — ThinkingController RV bias (Plan 202 GOAT, default-ON
# via rv_gated_routing in root). Tracking flag for thinking_controller's
# rv_gated_thinking cfg block.
rv_gated_thinking = []

# Directional credit — Entropy-bifurcated screening (Plan 184, default-ON).
# Tracking flag for thinking_controller's directional_credit cfg block.
directional_credit = []

# AND-OR DDTree Builder (Plan 190 T2, Plan 388 Phase 3 move from root).
# Gates the and_or_builder module. Root forwards via katgpt-speculative/and_or_dtree.
# Forwards to katgpt-core/and_or_dtree (gates katgpt_core::and_or::AndOrNode) and
# enables blake3 (and_or_builder's compute_hash uses it directly).
and_or_dtree = ["katgpt-core/and_or_dtree", "dep:blake3"]

# ── Plan 390 (2026-07-05): prefill substrate tracking flags. ──
# MaxSim late-interaction scoring — gates `block_score_maxsim` in prefill.rs.
# Forwards to katgpt-core/maxsim so `katgpt_core::simd::maxsim_score` resolves.
maxsim = ["katgpt-core/maxsim"]

[dev-dependencies]
# katgpt-pruners is a DEV-ONLY dep here (echo_env's GOAT test imports BanditPruner
# + BanditStrategy). Dev-deps do NOT propagate to dependents, so this does NOT
# create a cycle even though katgpt-pruners depends on katgpt-speculative.
# `features = ["echo_env_predictor"]` transitively enables bandit (which gates
# the bandit module the test imports).
# (Plan 388 Phase 3.)
katgpt-pruners = { path = "../katgpt-pruners", features = ["echo_env_predictor"] }
fastrand = "2"  # correlation_budget tests (Issue 003 move from root, which has fastrand as a dep)
serde_json = "1"  # segment_match IndexedSegment JSON roundtrip tests
tempfile = "3"  # rt_turbo calibration save/load roundtrip tests
