[package]
name = "katgpt-transformer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Transformer substrate types (weights, KV caches, contexts) shared between katgpt-rs and riir-engine"
repository = "https://github.com/katopz/katgpt-rs"
readme = "README.md"
keywords = ["transformer", "inference", "weights", "kv-cache", "modelless"]
categories = ["data-structures", "science"]
publish = false  # only katgpt-core ships to crates.io

[dependencies]
# Pure substrate types — depends only on katgpt-core for Config / Rng / math / SIMD kernels.
# No transformer-forward composition logic lives here (that stays in katgpt-rs root).
katgpt-core = { path = "../katgpt-core" }
rayon = "1.10"
blake3 = "1"
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }  # extern_crate_alloc: enables pod_collect_to_vec for MTP projection binary loader
# ArrayVec for PagedKVCache::ensure_pages/rollback stack-allocated scratch
# (zero heap alloc, bounded to 128 layers). Ported from riir-engine.
arrayvec = "0.7"
# Phase 9: dense_mesh's edge_bandit + edge_projection use fastrand.
fastrand = "2"

[features]
# All features default-on to match the historical katgpt-rs root behavior —
# downstream consumers (riir-engine) opt OUT of features they don't want.
default = ["wall_attention", "delta_routing", "decode_specialize", "plasma_path", "kog_cpu_fusion"]

# Kog AI monokernel CPU fusion — RMSNorm gamma folding + QKV interleaving (Plan 160).
# Gates: LayerWeights.attn_norm_gamma / mlp_norm_gamma / attn_qkv_fused fields,
# and TransformerWeights::fold_gamma / interleave_qkv methods. Consumers that
# don't use Kog fusion (riir-engine) disable this to get the compact 6-field
# LayerWeights and avoid ~2×n floats/layer of dead weight.
kog_cpu_fusion = []

# Wall Attention gate projection weights (Plan 173).
# Gates: LayerWeights.attn_wg field, WallPrefixState, GateStatistics.
wall_attention = []

# Delta routing block-delta accumulation (Plan 097).
# Gates: TransformerWeights.delta_routing_query / delta_routing_norm fields.
delta_routing = []

# Decode-stage specialized forward paths (Plan 102: TileRT pipeline).
# Gates: DecodeStage enum.
decode_specialize = []

# Bit-plane ternary SIMD matvec loader (Plan 148, Research 110).
# Gates: load_ternary_bits function in contiguous.rs.
plasma_path = []

# ── Phase 9 absorptions (Proposal 003) — modules moved from katgpt-rs root ──

# Memory Bandwidth Utilization diagnostics (Plan 160 T9). Folded under the
# existing kog_cpu_fusion feature because that's the gate the root used;
# no separate `mbu` feature exists.
# (mbu is gated by kog_cpu_fusion above — no new feature line needed.)

# Training-Free Loop Wrapper — ODE-refined sub-stepping (Plan 136).
# No internal deps; `recfm` and `thinking_prune` are no-op aggregator gates
# here (the recfm-accelerated functions and the pruner-schedule function both
# stay inside this module, but the pruner schedule function itself was moved
# to the katgpt-rs root shim to avoid a katgpt-pruners ↔ katgpt-transformer
# package cycle).
tf_loop = []

# RecFM acceleration-bounded sub-stepping (Plan 168 T2). No-op gate here —
# the substrate is local; root forwards here for feature aggregation.
recfm = []

# Thinking Prune gate (Plan 171). No-op here — the actual
# `should_apply_pruner_at_iteration` function lives in the root shim because
# it consumes `katgpt_pruners::PrunerSchedule` (and katgpt-pruners depends on
# katgpt-transformer, blocking the reverse dep).
thinking_prune = []

# DenseMesh latent node network (Plan 266, Research 234). EXPERIMENTAL —
# gate 2 failed empirically, demoted from GOAT-gated.
# `node_transformer.rs` stays in katgpt-rs root (consumes `forward`).
dense_mesh = []

# SwiR Switch-Thinking controller substrate (Plan 275, Research 241).
# Phase 12 T4.6 (2026-07-04): strategy_adapter moved here from root (thinking_cot cycle resolved).
swir_switch_thinking = []

# Thinking CoT — adaptive thinking controller (Plan 194). Phase 12 T4.6
# (2026-07-04): module moved here from katgpt-rs root. strategy_adapter depends on it.
thinking_cot = []

# DenseMesh adaptive width controllers.
# `collapse_aware_thinking` forwards to katgpt-core so the `CollapseDetector`
# trait is present (consumed by `dense_mesh/adaptive_width.rs::collapse_signal`).
# `breakeven_routing` is a no-op here — the code path uses only local types
# (`BreakevenSnapshot`), no external symbols. Both root forwards.
collapse_aware_thinking = ["katgpt-core/collapse_aware_thinking"]
breakeven_routing = []
