[package]
name = "microgpt-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared types and SIMD kernels for microgpt-rs and riir-engine"

[dependencies]
fastrand = "2"
rayon = "1.10"
log = "0.4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
half = "2"

[features]
default = ["sparse_mlp"]
sparse_mlp = []
domain_latent = []
maxsim = []
dllm = []  # Discrete diffusion language model support (Plan 068)
coda_fusion = []  # CODA-inspired fused SIMD kernels — matmul+residual+rmsnorm+activation (Plan 103)
lt2_looped = []  # LT2 looped inference types — LoopMode, HybridPattern, SdpaOutputGate, ResidualGate (Plan 108)
tiled_attention = []  # Tiled online-softmax flash attention for CPU SIMD (Plan 115)
sr2am_configurator = []  # SR²AM Configurator Bandit — learned per-turn planning regulation (Plan 112, Research 076)
data_gate = []  # Task-level data gating for self-play training stability (Plan 111, Research 075)
